[package]
name        = "p_key"
version     = "0.1.0"
edition     = "2021"
authors     = ["Valerio Antognelli <valerio@syntaxos.org>"]
license     = "Apache-2.0"
description = "P-Key core (Rust)."

[dependencies]
sha3       = "0.10"
hex        = "0.4"
rand       = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"